iphone overflow fix 4

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 html {
   font-family: 'pt sans',sans-serif;
   scroll-behavior: smooth;
+  position:relative;
 }
 
 body {
